Ritual Final Polish: Fixed build error and added custom skins for all wave mobs